# enzim-coder

./: .dockerignore  .gitignore  Cargo.toml  README.md  build.rs  config.json  icons.gresource.xml
apps/gtk/: Cargo.toml
apps/gtk/src/: actions.rs  lib.rs  main.rs
apps/gtk/src/ui/: content.rs  mod.rs  settings.rs  sidebar.rs  styles.rs  widget_tree.rs
apps/gtk/src/ui/components/: actions_menu.rs  appimage_update.rs  automatisation.rs  bottom_bar.rs  chat.rs  file_browser.rs  file_preview.rs  git_tab.rs  mod.rs  multi_chat.rs  placeholder.rs  remote_settings.rs  restore_preview.rs  runtime_auth_dialog.rs  settings_dialog.rs  skills_mcp_menu.rs  skills_mcp_reload_guard.rs  skills_mcp_settings.rs  style_picker.rs  thread_list.rs  thread_settings_dialog.rs  top_bar.rs  welcome_overlay.rs
apps/gtk/src/ui/components/chat/: codex_runtime.rs  composer.rs  history.rs  message_render.rs  profile_selector.rs  runtime_controls.rs
apps/gtk/src/ui/components/chat/codex_runtime/: attach_event_family_item_section.rs  attach_event_family_server_request_section.rs  attach_event_family_thread_section.rs  attach_event_family_turn_section.rs  attach_event_loop_section.rs  attach_impl.rs  (+2 more)
apps/gtk/src/ui/components/git_tab/: model.rs  operations.rs
apps/gtk/src/ui/components/multi_chat/: build_content.rs  build_content_drop_slot_section.rs  build_content_focus_poll_section.rs
apps/gtk/src/ui/components/restore_preview/: worker.rs
apps/gtk/src/ui/components/settings/: codex.rs  enzim_agent.rs  general.rs  mod.rs  opencode.rs  shared.rs
apps/gtk/src/ui/components/thread_list/: layout.rs  row_menu_impl.rs
apps/gtk/src/ui/styles/components/: automatisation.css  buttons.css  chat_messages.css  composer.css  restore_preview.css  settings.css  sidebar.css  skills_mcp_editor.css  style_picker.css  top_bar.css
(+162 files in other folders)
