[workspace]
members = [".", "apps/gtk", "crates/enzim_core"]
resolver = "3"

[workspace.package]
version = "0.1.3"

[package]
name = "enzimcoder"
version.workspace = true
edition = "2024"
rust-version = "1.92"

[dependencies]
enzim_core = { path = "crates/enzim_core" }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diffy = "0.4"
libc = "0.2"
toml = "0.9"
serde_yaml = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
