[package]
name = "enzimcoder-gtk"
version.workspace = true
edition = "2024"
rust-version = "1.92"

[[bin]]
name = "enzimcoder"
path = "src/main.rs"

[dependencies]
enzimcoder = { path = "../.." }
gtk = { package = "gtk4", version = "0.11", features = ["v4_22"] }
adw = { package = "libadwaita", version = "0.9", features = ["v1_8", "gtk_v4_22"] }
diffy = "0.4"
libc = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde_json = "1.0"
serde_yaml = "0.9"
sourceview5 = "0.11"
toml = "0.9"
